src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Bypass_Opportunity_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Used to bypass validation rule check for quote trigger. Quote trigger updates some technical fields on opportunity and for which the validation rules should not fire.</description>
        <label>Bypass Opportunity Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Locale__c</fullName>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>Default_BU__c</fullName>
        <description>R4 - Default BU</description>
        <label>Default LBU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Country_ISO_Code__c</fullName>
        <description>R4 - Default Country ISO Code</description>
        <label>Default Country ISO Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
<fields>
        <fullName>Default_LSO__c</fullName>
        <description>R4 - Default LSO</description>
        <label>Default LSO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_BU__c</fullName>
        <description>The field Devision is added to increase the ability to identify the area the user is related to / working in.
Added Abbreviation and Clear Text BU Information. In case there is a need to utilize this information later onwards for the Atlas Integration it need to be considered to use translation for the clear test info and only keep the abbreviation.</description>
        <label>Business Unit (BU)</label>
        <picklist>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSU - Sundry DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS - Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP - Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW - Installation Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS - Electrification Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU - Sundry EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP - Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG - Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASU - Sundry PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV - Medium Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU - Sundry PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS - Grid Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE - Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA - Various</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_DIV__c</fullName>
        <description>The field Division is added to increase the ability to identify the area the user is related to / working in.</description>
        <label>Division (DIV)</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>